--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-4 col-xs-6">
-                    <h2>For questions<br>and suggestions</h2>
+                    <h4>For questions and suggestions</h4>
                     <ul>
                         <li><img src="images/SVG Icon/envelope.svg">email@shelter.com</li>
                         <li><img src="images/SVG Icon/telephone.svg">+123456789</li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-xs-6">
-                    <h2>We are waiting<br>for your visit</h2>
+                    <h4>We are waiting for your visit</h4>
                     <ul>
                         <li><img src="images/SVG Icon/pin.svg">Fairfax, Virginia</li>
                     </ul>
