--- a/part3.html
+++ b/part3.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="image_container col-lg-5">
-                    <figure> <img src="images/Pets.png" alt="a dog and a cat siting next to each other">
+                    <figure> <img src="images/image2.jpeg" alt="a dog and a cat siting next to each other">
                     </figure>
                 </div>
                 <div class="about_text col-lg-5">
@@ -148,14 +148,14 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-4 col-xs-6">
-                    <h2>For questions<br>and suggestions</h2>
+                    <h4>For questions and suggestions</h4>
                     <ul>
                         <li><img src="images/SVG Icon/envelope.svg">email@shelter.com</li>
                         <li><img src="images/SVG Icon/telephone.svg">+123456789</li>
                     </ul>
                 </div>
                 <div class="col-md-4 col-xs-6">
-                    <h2>We are waiting<br>for your visit</h2>
+                    <h4>We are waiting for your visit</h4>
                     <ul>
                         <li><img src="images/SVG Icon/pin.svg">Fairfax, Virginia</li>
                     </ul>
