--- a/form.html
+++ b/form.html
@@ -58,10 +58,11 @@
     <div id="sub-banner" class="flex"></div>  
     <div class="row justify-content-center" style="padding:10px;">
         <div class="form__title">Apply for Adoption</div>
-        <p class="form__desc">
-            If you are interested in helping find a home for one of our furry friends, please fill out the form so that we can make sure you and your future pet are a perfect fit.
-        </p>
     </div>
+    <p class="row justify-content-center">
+        If you are interested in helping find a home for one of our furry friends, please fill out the form so that we can make sure you and your future pet are a perfect fit.
+    </p>
+   <br></br>
     <form id="form">
         
         <div class="container">
