--- a/index.html
+++ b/index.html
@@ -174,13 +174,14 @@
             <span class="close-button">&times;</span>
             <img id="petModalImage" src="" alt="Pet" width="270" height="300">
             <h2 id="petModalName"></h2>
-            <p id="petModalAge"></p>
-            <p id="petModalGender"></p>
-            <p id="petModalLocation"></p>
-            <p id="petModalBreed"></p>
+            <p><strong>Age:</strong> <span id="petModalAge"></span></p>
+            <p><strong>Gender:</strong> <span id="petModalGender"></span></p>
+            <p><strong>Location:</strong> <span id="petModalLocation"></span></p>
+            <p><strong>Breed:</strong> <span id="petModalBreed"></span></p>
             <p id="petModalDescription"></p>
         </div>
     </div>
+    
 
     <a class="top-link hide" href="" id="js-top">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 3"><path d="M12 6H0l6-6z"/></svg>
