--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <section id="filter">
             <div class="container">
                 <h2 class = "form__title" style="text-align: center;">Filter Pets</h2>
-                <form id="filterForm">
+                <form id="filterForm" style="justify-content: center;">
                     <!-- Type -->
                     <div class="col-md-3">
                         <label for="type" class = "form__label">Type of pet:</label>
@@ -108,7 +108,7 @@
                     </div>
         
                     <!-- Maximum Age -->
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <label for="ageMax" class = "form__label">Max Age:</label>
                         <input type="range" id="ageMax" name="ageMax" min="0" max="20" value="20" oninput="ageMaxOutput.value = ageMax.value">
                         <output id="ageMaxOutput">20</output> years
